@@ -72,6 +72,8 @@ Feature Additions:
  -- Add /nostrip switch to @chown, @chownall, and @clone.
  -- Add new successes() code from Jon@Firan.
  -- Combine old and new versions of SUCCESSES().
+ -- Added comalias, doing, exitname, malias, maliasdesc, and password
+    tests to VALID() (Issue 211).
 
 
 Bug Fixes:
@@ -231,6 +233,8 @@ Bug Fixes:
  -- @moniker without any argument gave 'I don't see that here.' followed by
     'Permission denied.'.  (Issue 40).
  -- Update PATCHES file (Issue 189).
+ -- RxLevel and TxLevel were reversed in @examine leading to much
+    confusion in using reality levels (Issue 62).
 
 
 Performance Enhancements:
@@ -263,3 +267,4 @@ Miscellaneous:
  -- Add mux_fopen() utility function to replace direct use of fopen().
  -- Updated config.guess, config.sub, and configure to later versions.
  -- Updated to autoconf 2.60a.
+ -- Refer to tinymux.org instead of tinymux.com.
